<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4CE0B"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_random"
        android:layout_width="373dp"
        android:layout_height="97dp"
        android:background="#F4CE0B"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="R"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="72sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/button_second"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45" />


    <Button
        android:id="@+id/button_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="108dp"
        android:text="@string/previous"
        android:textColor="#E10404"
        android:textStyle="italic"
        app:backgroundTint="@color/black"
        app:iconTint="#F30000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:text="@string/random_heading"
        android:background="#F4CE0B"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_random"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/random_again"
        android:textColor="#E10404"
        android:textStyle="italic"
        app:backgroundTint="@color/black"
        app:iconTint="#F30000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.841" />

    <Button
        android:id="@+id/button_square"
        android:layout_width="79dp"
        android:layout_height="51dp"
        android:text="@string/button_square"
        android:textColor="#E10404"
        android:textStyle="italic"
        app:backgroundTint="@color/black"
        app:iconTint="#F30000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.693" />
</androidx.constraintlayout.widget.ConstraintLayout>